# bitset

./: CMakeLists.txt  bitset.cpp  bitset.h  main.cpp
include/: bitset.h
src/: bitset.cpp  main.cpp
tests/: CMakeLists.txt  test_bitset.cpp
